fix(CopyButton): add visibility property in CopyButton css

--- a/src/components/CopyPageButton/CopyPageButton.module.css
+++ b/src/components/CopyPageButton/CopyPageButton.module.css
@@ -14,14 +14,15 @@
 /* Button container styles */
 .container {
   position: relative;
-  display: none;
+  display: inline-block;
+  visibility: hidden;
 }
 
 .h1Wrapper .container {
   position: absolute;
   top: 0;
   right: 0;
-  display: inline-block;
+  visibility: visible;
 }
 
 .mainButton {
